fix some contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -458,5 +458,5 @@ main {
   }
 
   #more {
-    color: rgb(240, 79, 79);
+    color: rgb(76, 1, 1);
   }
